--- a/docker/Dashboard/docker-compose.yml
+++ b/docker/Dashboard/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     restart: always
     environment:
       PMA_ARBITRARY: 1
+      PMA_ABSOLUTE_URI: http://127.0.0.1/phpmyadmin
     ports: 
        - 8083:80
     volumes:
