--- a/docker/Tool/docker-compose.yml
+++ b/docker/Tool/docker-compose.yml
@@ -6,4 +6,24 @@ services:
     restart: always
     ports:
       - 8085:80
+  jellyfin:
+    image: jellyfin/jellyfin
+    container_name: jellyfin
+    user: root:root
+    network_mode: 'host'
+    volumes:
+    # 將設定檔和縮圖的存放至目前的目錄
+      - "./config:/config"
+      - "./cache:/cache"
+    # 參考下面格式，將硬碟的目錄(冒號左邊)依序掛載至Jellyfin的/media、/media2、/media3目錄，以此類推
+      - "/home/user/Movies:/Movies:ro"
+      - "/home/user/Music:/Music:ro"
+      - "/home/user/Comics:/Comics:ro"
+    # 開機自動啟動容器
+    restart: 'unless-stopped'
+    environment:
+    # 除非您有自己的域名，否則不需改這行
+      #- JELLYFIN_PublishedServerUrl=http://example.com
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     
