--- a/docker/Tool/docker-compose.yml
+++ b/docker/Tool/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     image: jellyfin/jellyfin
     container_name: jellyfin
     user: root:root
+    ports:
+      - 8086:8086
     network_mode: 'host'
     volumes:
     # 將設定檔和縮圖的存放至目前的目錄
