--- a/docker/Tool/docker-compose.yml
+++ b/docker/Tool/docker-compose.yml
@@ -1,31 +1,32 @@
 version: '1.0'
 
-services:
-  mqttx-web:
-    image: emqx/mqttx-web
-    restart: always
-    ports:
-      - 8085:80
+services:     
   jellyfin:
     image: jellyfin/jellyfin
     container_name: jellyfin
     user: root:root
     ports:
-      - 8086:8086
+      - 8096:8096 # http
+      - 8920:8920 # https
+      - 7359:7359 # 內網
+      - 1900:1900 # DLNA
     network_mode: 'host'
     volumes:
     # 將設定檔和縮圖的存放至目前的目錄
-      - "./config:/config"
-      - "./cache:/cache"
+      - "/opt/jellyfin/config:/config"
+      - "/opt/jellyfin/cache:/cache"
     # 參考下面格式，將硬碟的目錄(冒號左邊)依序掛載至Jellyfin的/media、/media2、/media3目錄，以此類推
       - "/home/user/Movies:/Movies:ro"
+      - "/home/user/Video:/Video:ro"
       - "/home/user/Music:/Music:ro"
       - "/home/user/Comics:/Comics:ro"
-    # 開機自動啟動容器
-    restart: 'unless-stopped'
+    restart: 'always' # 開機自動啟動容器
+    devices:
+      - /dev/dri:/dev/dri
     environment:
-    # 除非您有自己的域名，否則不需改這行
-      #- JELLYFIN_PublishedServerUrl=http://example.com
+      - TZ=Asia/Taipei  # 時區
+      - JELLYFIN_PublishedServerUrl=192.168.0.72 # 除非您有自己的域名，否則不需改這行
+      - video-codecs=vc1dec,h264dec,h264enc,h265dec,h265enc
     extra_hosts:
       - "host.docker.internal:host-gateway"
     
