--- a/docker/Dashboard/docker-compose.yml
+++ b/docker/Dashboard/docker-compose.yml
@@ -31,22 +31,24 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
 
   librenms:
-      image: jarischaefer/docker-librenms
-      restart: always
-      ports:
-        - '8085:80'
-      volumes:
-        - ./librenms_data/logs:/opt/librenms/logs
-        - ./librenms_data/rrd:/opt/librenms/rrd
-      environment:
-          APP_KEY: base64:NA......................................SdA=
-          DB_HOST: 192.168.0.1
-          DB_USER: [you_username]
-          DB_PASS: [you_password]
-          DB_NAME: librenms_db
-          POLLERS: 16
-          BASE_URL: http://192.168.0.1
-          TZ: Asia/Taipei
+    image: jarischaefer/docker-librenms
+    restart: always
+    ports:
+      - '8085:80' 
+    volumes:
+      - ./librenms_data/logs:/opt/librenms/logs 
+      - ./librenms_data/rrd:/opt/librenms/rrd
+    environment:
+      APP_KEY: base64:NA......................................SdA= 
+      DB_HOST: 192.168.0.1  
+      DB_USER: your_username  
+      DB_PASS: your_password  
+      DB_PORT: 3306  
+      DB_NAME: librenms_db  
+      LISTEN_IPV6: "false" 
+      POLLERS: 16  
+      BASE_URL: http://192.168.0.1  
+      TZ: Asia/Taipei  
 
 volumes:
   portainer_data:
