--- a/docker/Dashboard/.env
+++ b/docker/Dashboard/.env
@@ -3,6 +3,7 @@ PUID=1000
 PGID=1000
 
 DB_address=192.168.0.1
-MYSQL_DATABASE=librenms_db
+Librenms_MYSQL_DATABASE=librenms_db
+Redmine_DB_NAME=redmine
 MYSQL_USER=librenms
 MYSQL_PASSWORD=asupersecretpassword
